# NN-architectural-program-creator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/sample/: relationships.csv  spaces.csv
src/architectural_layout_solver/: __init__.py  layout_solver.py
src/nn_archi/: __init__.py
