[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-archi"
version = "0.1.0"
description = "Neural-network-assisted rectangular layout solver for architectural space planning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "torch>=2.2",
]

[project.scripts]
nn-archi-layout = "nn_archi.layout_solver:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
